# ITMO-CPP-HW

task1/: CMakeLists.txt  main.c
task2/: CMakeLists.txt  main.c
task3/: CMakeLists.txt  rational.cpp  rational.h  rational.h.gch
task3/include/: rational.h
task4/: CMakeLists.txt  format.cpp  format.h  main.cpp
task6/: CMakeLists.txt  lazy_string.cpp  lazy_string.h  main.cpp
Документы/: README.md
